zien24_implementation/org/objects/Job_Region__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>